[package]
name = "webpki-roots"
version = "0.22.0"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
readme = "README.md"
license = "MPL-2.0"
description = "Mozilla's CA root certificates for use with webpki"
homepage = "https://github.com/ctz/webpki-roots"
repository = "https://github.com/ctz/webpki-roots"

[dependencies]
webpki = { git = "https://github.com/gaojiaqi7/webpki.git", branch = "uefi_support" }
